--- a/gradle/jacoco.gradle
+++ b/gradle/jacoco.gradle
@@ -15,5 +15,9 @@ test {
     append = true
     destinationFile = project(':spotbugs').file('build/jacoco/test.exec')
     includeNoLocationClasses = true
+
+    // support JDK9+
+    // https://github.com/gradle/gradle/issues/5184#issuecomment-391982009
+    excludes = ['jdk.internal.*']
   }
 }
