--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ install:
 script:
   - jdk_switcher use oraclejdk8
   - ./gradlew classes testClasses -S
-  - if [[ $TRAVIS_JDK_VERSION == "openjdk11" ]]; then export JAVA_HOME=$HOME/openjdk11; mkdir $JAVA_HOME; .travis/install-jdk.sh -F 11 -L GPL --target $JAVA_HOME --workspace ${TRAVIS_HOME}/.cache/install-jdk; fi
+  - if [[ $TRAVIS_JDK_VERSION == "openjdk11" ]]; then export JAVA_HOME=$HOME/openjdk11; fi
   - ./gradlew -v --no-daemon
   - ./gradlew build smoketest -S --no-daemon
   - jdk_switcher use oraclejdk8
