--- a/spotbugsTestCases/build.gradle
+++ b/spotbugsTestCases/build.gradle
@@ -21,6 +21,9 @@ dependencies {
   compile 'net.jcip:jcip-annotations:1.0'
   compile 'org.springframework:spring-core:4.3.8.RELEASE'
 
+  // Java 10+ has no javax.annotation packages by default, so add this dependency explicitly
+  compile 'javax.annotation:javax.annotation-api:1.3.2'
+
   compile 'junit:junit:4.12'
   compile 'org.testng:testng:6.11'
 
